Atualizando o projeto